--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,26 @@
 <html>
   <head>
     <title>The Grand Proxy</title>
-
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    <div id="app"></div>
-	  <div id="photo-wheel"><div>
-	  <div id="sb-app"><div>
-	  	
-    <script src="./headermapBundle.js"></script>
-	  <script src="./photo-wheelBundle.js"></script>
-	  <script src="./sidebarBundle.js"></script>
+  	<img src="https://s3-us-west-1.amazonaws.com/yelpreactorsidebaricons/YelpHeader.png" 
+  	  id="nav" 
+  	  draggable="false"/>
+
+  	  <div id="grey">
+		    <div id="header-map"></div>  	
+  	  </div>
+
+	  	<div id="lowerbody">
+		    <div id="root"></div>
+			  <div id="sb-app"></div>
+	  	</div>
+
+	  <script src="http://localhost:7763/:id/bundle.js"></script>
+    <script src="http://localhost:3001/:id/bundle.js"></script>
+    <script src="http://localhost:3002/:id/bundle.js"></script>
+	  <script src="http://localhost:7878/:id/bundle.js"></script>
   </body>
 </html>
