--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
 		  <div id="sb-app"></div>
   	</div>
 
-	  <script src="https://s3-us-west-1.amazonaws.com/yelp-reactor-header/bundle.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/yelpreactor/bundle.js"></script>
+	  <script src="https://s3-us-west-1.amazonaws.com/yelp-reactor-header/bundle.js.gz"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/yelpreactor/bundle.js.gz"></script>
     <script src="https://s3-us-west-1.amazonaws.com/yelpreactorreviews/bundle.js"></script>
-	  <script src="https://s3-us-west-1.amazonaws.com/yelpreactorsidebaricons/bundle.js"></script>
+	  <script src="https://s3-us-west-1.amazonaws.com/yelpreactorsidebaricons/bundle.js.gz"></script>
   </body>
 </html>
